# agent-army

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  test.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-infrastructure-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-agent-orchestration/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  02-06-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-knowledge-base/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-06-PLAN.md  03-06-SUMMARY.md  03-07-PLAN.md  03-07-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-sales-agent-core/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/04.1-agent-learning-performance-feedback/: 04.1-01-PLAN.md  04.1-01-SUMMARY.md  04.1-02-PLAN.md  04.1-02-SUMMARY.md  04.1-03-PLAN.md  04.1-03-SUMMARY.md  04.1-CONTEXT.md  04.1-RESEARCH.md  04.1-VERIFICATION.md
.planning/phases/04.2-qbs-methodology-integration/: 04.2-01-PLAN.md  04.2-01-SUMMARY.md  04.2-02-PLAN.md  04.2-02-SUMMARY.md  04.2-03-PLAN.md  04.2-03-SUMMARY.md  04.2-04-PLAN.md  04.2-04-SUMMARY.md  04.2-CONTEXT.md  04.2-RESEARCH.md  04.2-VERIFICATION-2.md  04.2-VERIFICATION.md
.planning/phases/05-deal-management/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-05-PLAN.md  05-05-SUMMARY.md  05-06-PLAN.md  05-06-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-VERIFICATION-v1.md  05-VERIFICATION.md
.planning/phases/06-meeting-capabilities/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md  06-05-PLAN.md  06-05-SUMMARY.md  06-06-PLAN.md  06-06-SUMMARY.md  06-CONTEXT.md  06-RESEARCH.md
.planning/phases/07-intelligence-autonomy/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-04-PLAN.md  07-04-SUMMARY.md  07-05-PLAN.md  07-05-SUMMARY.md  07-06-PLAN.md  07-06-SUMMARY.md  07-CONTEXT.md  07-RESEARCH.md  07-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py  tenant.py
alembic/versions/: 001_initial_shared.py  002_initial_tenant.py  add_deal_management_tables.py  add_intelligence_tables.py  add_learning_outcome_feedback_tables.py  add_meeting_tables.py  add_pgvector_and_memory_table.py  add_sales_conversation_state.py
data/methodology/: bant.md  meddic.md  spin.md
data/products/: billing.md  charging.md  monetization-platform.md
data/regional/: americas.md  apac.md  emea.md
docs/: credential-setup.md
docs/plans/: 2026-02-27-agent-army-template-design.md  2026-02-27-agent-army-template.md
meeting-bot-webapp/: package.json  vercel.json
meeting-bot-webapp/src/: app.js  index.html
scripts/: backup.py  provision_tenant.py  restore.py  seed_sa_knowledge.py  verify_production.py
src/app/: config.py  main.py
src/knowledge/: __init__.py  config.py  embeddings.py  models.py  qdrant_client.py
tests/: conftest.py  test_agent_registry.py  test_auth.py  test_autonomy.py  test_ba_handoff.py  test_bot_services.py  test_business_analyst.py  test_calendar_briefing.py  test_collections_csm_integration.py  test_collections_handlers.py  test_collections_notion_adapter.py  test_collections_schemas.py  test_collections_scorer.py  test_collections_wiring.py  test_consolidation.py  test_context.py  test_crm_adapter.py  test_csm_expansion_dispatch.py  test_csm_handlers.py  test_csm_health_scorer.py  test_csm_notion_adapter.py  test_csm_prompt_builders.py  test_csm_schemas.py  test_csm_wiring.py  test_deal_api.py  test_deal_detection.py  test_deal_hooks.py  test_deal_political.py  test_deal_progression.py  test_events.py  test_gsuite.py  test_handoffs.py  test_intelligence_api.py  test_intelligence_data.py  test_learning_feedback_calibration.py  test_learning_integration.py  test_learning_outcomes.py  test_llm.py  test_meeting_foundation.py  test_meeting_integration.py  (+23 more)
tests/knowledge/: test_conversations.py  test_ingestion.py  test_methodology.py  test_pipeline.py  test_product_ingestion.py  test_qdrant_client.py  test_rag_pipeline.py  test_regional.py
(+322 files in other folders)
