[project]
name = "agent-army"
version = "0.1.0"
description = "Enterprise Sales Organization Platform with Multi-Agent AI Crew"
requires-python = ">=3.12"
dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.18.0",
    "redis[hiredis]>=5.0.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    # LLM (for next plan)
    "litellm>=1.60.0",
    # HTTP
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    # Logging
    "structlog>=24.0.0",
    # Monitoring (for plan 03)
    "prometheus-client>=0.21.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "psycopg2-binary>=2.9.11",
    # Agent orchestration (Phase 2)
    "langgraph>=1.0.8",
    "langgraph-supervisor>=0.0.31",
    "langgraph-checkpoint-postgres>=3.0.4",
    "langfuse>=3.14.1",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "tiktoken>=0.7.0",
    "pgvector>=0.3.0",
    # Knowledge Base (Phase 3)
    "qdrant-client>=1.12.0",
    "openai>=1.0.0",
    "fastembed>=0.4.0",
    "python-dotenv>=1.0.0",
    "langchain-text-splitters>=0.3.0",
    "pyyaml>=6.0.0",
    "chardet>=5.0.0",
    # Sales Agent GSuite Integration (Phase 4)
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
    "instructor>=1.7.0",
    "jinja2>=3.1.0",
    # Deal Management CRM Integration (Phase 5)
    "notion-client>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app", "src/knowledge"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
